--- a/index.html
+++ b/index.html
@@ -4,10 +4,32 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/ico" href="assets/img/icon.png">
+  <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+  <link rel="stylesheet" href="assets/css/main.css">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>LABCAR | HOME</title>
 </head>
-<body>
+<body class="container-fluid">
+  <div class="row">
+    <div id="nav" class="col-lg-12">
+      <nav class="navbar">
+        <div id="logo"class="">
+          <img src="assets/img/logo.png" alt="logo LabCar">
+        </div>
+        <div id="opciones" class="">
+          <ul class="list-inline">
+            <li><a href="#">Viaja</a></li>
+            <li><a href="#">Conduce</a></li>
+            <li><a href="#">Inicia Sesión</a></li>
+          </ul>
+        </div>
+      </nav>
+    </div>
+
+    <section id="portada" class="col-lg-12">
+      <div class="col-lg-5">
+      </div>
+    </section>
   <!-- <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDMW32VPlxybj__BvTKHC_OSM3QPZeh0CE&callback=initMap&libraries=places"></script> -->
   <script type="text/javascript" src="assets/js/app.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
