--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="row">
     <div id="nav" class="col-lg-12">
       <nav class="navbar">
-        <div id="logo"class="">
+        <div id="logo"class="inline-block">
           <img src="assets/img/logo.png" alt="logo LabCar">
         </div>
         <div id="opciones" class="">
@@ -26,10 +26,19 @@
       </nav>
     </div>
 
-    <section id="portada" class="col-lg-12">
-      <div class="col-lg-5">
+    <section id="portada" class="container-fluid">
+      <div id="form"class="col-lg-5">
+        <h1>Disfruta del viaje <br> Eres dueño de tu tiempo</h1>
+        <h2>Viaja con <img src="assets/img/logo-blanco.png" alt="logo labcar"></h2>
+        <span>REGÍSTRATE</span>
+        <div class="col-lg-12">
+          <div class="col-lg-4"><hr></div>
+          <div class="col-lg-4">●	O BIEN</div>
+          <div class="col-lg-4"><hr></div>
+        </div>
       </div>
     </section>
+  </div>
   <!-- <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDMW32VPlxybj__BvTKHC_OSM3QPZeh0CE&callback=initMap&libraries=places"></script> -->
   <script type="text/javascript" src="assets/js/app.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
