--- a/index.html
+++ b/index.html
@@ -9,14 +9,15 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>LABCAR | HOME</title>
 </head>
-<body class="container-fluid">
-  <div class="row">
-    <div id="nav" class="col-lg-12">
+<body class="">
+
+  <div class="row nav-hero">
+    <header id="navegador" class="col-lg-12">
       <nav class="navbar">
-        <div id="logo"class="inline-block">
+        <div id="logo" class="col-lg-4">
           <img src="assets/img/logo.png" alt="logo LabCar">
         </div>
-        <div id="opciones" class="">
+        <div id="opciones" class="col-lg-offset-8">
           <ul class="list-inline">
             <li><a href="#">Viaja</a></li>
             <li><a href="#">Conduce</a></li>
@@ -24,20 +25,40 @@
           </ul>
         </div>
       </nav>
-    </div>
+    </header>
 
-    <section id="portada" class="container-fluid">
-      <div id="form"class="col-lg-5">
-        <h1>Disfruta del viaje <br> Eres dueño de tu tiempo</h1>
-        <h2>Viaja con <img src="assets/img/logo-blanco.png" alt="logo labcar"></h2>
-        <span>REGÍSTRATE</span>
-        <div class="col-lg-12">
-          <div class="col-lg-4"><hr></div>
-          <div class="col-lg-4">●	O BIEN</div>
-          <div class="col-lg-4"><hr></div>
+    <section id="hero-form" class="col-lg-12">
+      <form class="col-lg-offset-7 bg-yellow">
+        <div class="container">
+          <h1>Disfruta del viaje <br> Eres dueño de tu tiempo</h1>
+          <h2>Viaja con <img src="assets/img/logo-blanco.png" alt="logo labcar"></h2>
+          <span>REGÍSTRATE</span>
+          <div id="texto" class="col-lg-12">
+            <div class="col-lg-4"><hr></div>
+            <div class="col-lg-4">O BIEN</div>
+            <div class="col-lg-4"><hr></div>
+          </div>
+          <div>
+            <button type="button" class="btn btn-default">Conviértete en conductor</button>
+          </div>
         </div>
-      </div>
+      </form>
     </section>
+  </div>
+
+  <div class="row">
+    <div class="col-lg-12 bg-yellow">
+      <section class="">
+        <div class="col-lg-10">
+          <div class="col-lg-6">
+            <img src="assets/img/celular.png" alt="">
+          </div>
+          <div class="col-lg-6"></div>
+        </div>
+
+        </div>
+      </section>
+    </div>
   </div>
   <!-- <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDMW32VPlxybj__BvTKHC_OSM3QPZeh0CE&callback=initMap&libraries=places"></script> -->
   <script type="text/javascript" src="assets/js/app.js"></script>
