solucionar la grilla de info

--- a/index.html
+++ b/index.html
@@ -9,11 +9,10 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>LABCAR | HOME</title>
 </head>
-<body class="">
+<body class="container-fluid">
 
-  <div class="row nav-hero">
-    <header id="navegador" class="col-lg-12">
-      <nav class="navbar">
+  <header id="nav-hero" class="row">
+    <nav class="navbar">
         <div id="logo" class="col-lg-4">
           <img src="assets/img/logo.png" alt="logo LabCar">
         </div>
@@ -25,41 +24,45 @@
           </ul>
         </div>
       </nav>
-    </header>
-
-    <section id="hero-form" class="col-lg-12">
-      <form class="col-lg-offset-7 bg-yellow">
-        <div class="container">
-          <h1>Disfruta del viaje <br> Eres dueño de tu tiempo</h1>
-          <h2>Viaja con <img src="assets/img/logo-blanco.png" alt="logo labcar"></h2>
-          <span>REGÍSTRATE</span>
-          <div id="texto" class="col-lg-12">
-            <div class="col-lg-4"><hr></div>
-            <div class="col-lg-4">O BIEN</div>
-            <div class="col-lg-4"><hr></div>
+    <section id="hero-form" class="col-lg-12 col-md-12">
+        <form class="col-lg-5 bg-yellow">
+          <div class="row">
+            <div id="titulos"class="">
+              <h1>Disfruta del viaje <br> Eres dueño de tu tiempo</h1>
+              <h2>Viaja con <img src="assets/img/logo-blanco.png" alt="logo labcar"></h2>
+              <span>REGÍSTRATE</span>
+            </div>
+            <div id="texto" class="col-lg-12 col-xs-12">
+              <div class="col-lg-4 col-xs-4"><hr></div>
+              <div class="col-lg-4 col-xs-4">O BIEN</div>
+              <div class="col-lg-4 col-xs-4"><hr></div>
+            </div>
+            <div>
+              <button type="button" class="btn btn-default">Conviértete en conductor</button>
+            </div>
           </div>
-          <div>
-            <button type="button" class="btn btn-default">Conviértete en conductor</button>
-          </div>
-        </div>
-      </form>
-    </section>
-  </div>
-
-  <div class="row">
-    <div class="col-lg-12 bg-yellow">
-      <section class="">
-        <div class="col-lg-10">
-          <div class="col-lg-6">
-            <img src="assets/img/celular.png" alt="">
-          </div>
-          <div class="col-lg-6"></div>
-        </div>
-
-        </div>
+        </form>
       </section>
-    </div>
-  </div>
+  </header>
+
+  <section id="info" class="row bg-yellow">
+      <div class="col-lg-10 col-xs-10 border-info">
+        <div class="col-lg-4">
+          <img src="assets/img/celular.png" alt="celular">
+        </div>
+        <div class="col-lg-4 col-xs-4">
+          <h2>Descarga la nueva app</h2>
+          <p>La versión actualizada de LabCar está llena de nuevas funciones para llegar a donde quieras aún más fácil y rápido.</p>
+          <p>La versión actualizada de LabCar está llena de nuevas funciones para llegar a donde quieras aún más fácil y rápido.</p>
+        </div>
+      </div>
+      <div class="col-lg-2">
+
+      </div>
+  </section>
+
+  sec
+
   <!-- <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDMW32VPlxybj__BvTKHC_OSM3QPZeh0CE&callback=initMap&libraries=places"></script> -->
   <script type="text/javascript" src="assets/js/app.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
