info-conduce solo maquetado

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
       </nav>
     <section id="hero-form" class="col-lg-12 col-md-12">
-        <form class="col-lg-5 bg-yellow">
+        <form class="col-lg-5 col-xs-8 bg-yellow">
           <div class="row">
             <div id="titulos"class="">
               <h1>Disfruta del viaje <br> Eres dueño de tu tiempo</h1>
@@ -46,8 +46,8 @@
   </header>
 
   <section id="info" class="row bg-yellow">
-      <div class="col-lg-10 col-xs-10 border-info">
-        <div class="col-lg-4">
+      <div class="col-lg-10 col-xs-12 border-info">
+        <div class="col-lg-4 col-lg-12">
           <img src="assets/img/celular.png" alt="celular">
         </div>
         <div class="col-lg-4 col-xs-4">
@@ -61,7 +61,47 @@
       </div>
   </section>
 
-  sec
+  <section id="conduce" class="row">
+    <div class="col-lg-12">
+      <div class="col-lg-3 bg-black">
+        <h3>Conduce cuando quieras
+        </h3>
+        <p>LabCar es una opción flexible para alcanzar tus metas financieras.</p>
+        <button type="button" class="btn btn-warning">Conviértete en conductor</button>
+      </div>
+    </div>
+  </section>
+
+  <section id="tarifas" class="row bg-yellow">
+    <div class="container">
+      <div class="col-lg-12">
+        <div class="col-lg-6">
+          <form class="" action="index.html" method="post">
+            <div class="">
+              <h3>Tarifas</h3>
+              <p>Consulta las tarifas LabCar aquí</p>
+            </div>
+            <div class="">
+              <i></i>
+              <input type="text" class="" placeholder="Ingrese punto de partida">
+            </div>
+            <div class="">
+              <i></i>
+              <input type="text" class="" placeholder="Ingrese un destino">
+            </div>
+            <div class="">
+              <button type="button" id="ruta" class="btn btn-default">Trazar ruta</button>
+            </div>
+          </form>
+        </div>
+        <div id="mapa" class="col-lg-6">
+          <div class="col-lg-10 center">
+
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
   <!-- <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDMW32VPlxybj__BvTKHC_OSM3QPZeh0CE&callback=initMap&libraries=places"></script> -->
   <script type="text/javascript" src="assets/js/app.js"></script>
