--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/ico" href="assets/img/icon.png">
+  <link rel="stylesheet" href="assets/icon/style.css">
   <link rel="stylesheet" href="assets/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/css/main.css">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -82,11 +83,11 @@
               <p>Consulta las tarifas LabCar aquí</p>
             </div>
             <div class="">
-              <i></i>
+              <i class="glyphicon glyphicon-record"></i>
               <input type="text" class="" placeholder="Ingrese punto de partida">
             </div>
             <div class="">
-              <i></i>
+              <i class="glyphicon glyphicon-send"></i>
               <input type="text" class="" placeholder="Ingrese un destino">
             </div>
             <div class="">
@@ -98,6 +99,62 @@
           <div class="col-lg-10 center">
 
           </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section id="footer" class="row">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12 margin">
+          <p><img src="assets/img/logo-blanco.png" alt="logo"></p>
+          <hr>
+        </div>
+      </div>
+      <div class="row text-center">
+        <div class="col-lg-12">
+          <div class="col-lg-3">
+              <i class="icon-facebook:before"></i>
+              <i class="icon-twitter"></i>
+              <i class="icon-linkedin2"></i>
+              <i class="icon-appleinc"></i>
+              <i class="icon-play3"></i>
+          </div>
+          <div class="col-lg-3">
+            <ul class="media-list">
+              <li>Viaja</li>
+              <li>Conduce</li>
+              <li>Ciudades</li>
+              <li>Tarifas</li>
+              <li>Entregas</li>
+              <li>Cómo funciona</li>
+              <li>Paises</li>
+              <li>Seguridad</li>
+            </ul>
+          </div>
+          <div class="col-lg-3">
+            <ul class="media-list">
+              <li>Viaja</li>
+              <li>Conduce</li>
+              <li>Ciudades</li>
+              <li>Tarifas</li>
+              <li>Entregas</li>
+              <li>Cómo funciona</li>
+              <li>Paises</li>
+              <li>Seguridad</li>
+            </ul>
+          </div>
+          <div class="col-lg-3">
+            <img src="assets/img/google-play.png" alt="google play">
+            <img src="assets/img/app-store.png" alt="app store">
+          </div>
+        </div>
+      </div>
+      <div class="row text-center ">
+        <div class="col-lg-12 margin">
+          <hr>
+          <span class="">&copy 2017 LabCar technologies inc.</span>
         </div>
       </div>
     </div>
