--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans|Raleway">
   <link rel="icon" type="image/ico" href="assets/img/icon.png">
   <link rel="stylesheet" href="assets/icon/style.css">
   <link rel="stylesheet" href="assets/css/bootstrap.min.css">
@@ -25,9 +26,9 @@
           </ul>
         </div>
       </nav>
-    <section id="hero-form" class="col-lg-12 col-md-12">
+    <section id="hero-form" class="col-lg-12 col-md-12 white">
         <form class="col-lg-5 col-xs-8 bg-yellow">
-          <div class="row">
+          <div class="row margin">
             <div id="titulos"class="">
               <h1>Disfruta del viaje <br> Eres dueño de tu tiempo</h1>
               <h2>Viaja con <img src="assets/img/logo-blanco.png" alt="logo labcar"></h2>
@@ -51,7 +52,7 @@
         <div class="col-lg-4 col-lg-12">
           <img src="assets/img/celular.png" alt="celular">
         </div>
-        <div class="col-lg-4 col-xs-4">
+        <div class="col-lg-4 col-xs-4 white">
           <h2>Descarga la nueva app</h2>
           <p>La versión actualizada de LabCar está llena de nuevas funciones para llegar a donde quieras aún más fácil y rápido.</p>
           <p>La versión actualizada de LabCar está llena de nuevas funciones para llegar a donde quieras aún más fácil y rápido.</p>
@@ -65,36 +66,38 @@
   <section id="conduce" class="row">
     <div class="col-lg-12">
       <div class="col-lg-3 bg-black">
-        <h3>Conduce cuando quieras
-        </h3>
-        <p>LabCar es una opción flexible para alcanzar tus metas financieras.</p>
-        <button type="button" class="btn btn-warning">Conviértete en conductor</button>
+        <div class="margin white">
+          <h3>Conduce cuando quieras
+          </h3>
+          <p>LabCar es una opción flexible para alcanzar tus metas financieras.</p>
+          <button type="button" class="btn btn-warning">Conviértete en conductor</button>
+        </div>
       </div>
     </div>
   </section>
 
-  <section id="tarifas" class="row bg-yellow">
-    <div class="container">
+  <section id="tarifas" class="row bg-yellow white">
+    <div class="container margin">
       <div class="col-lg-12">
         <div class="col-lg-6">
-          <form class="" action="index.html" method="post">
+          <form class="form-group" action="index.html" method="post">
             <div class="">
               <h3>Tarifas</h3>
               <p>Consulta las tarifas LabCar aquí</p>
             </div>
-            <div class="">
+            <div class="form-inline">
               <i class="glyphicon glyphicon-record"></i>
-              <input type="text" class="" placeholder="Ingrese punto de partida">
+              <input type="text" class="form-control" placeholder="Ingrese punto de partida">
             </div>
-            <div class="">
-              <i class="glyphicon glyphicon-send"></i>
-              <input type="text" class="" placeholder="Ingrese un destino">
+            <div class="form-inline">
+              <i class="glyphicon glyphicon-send "></i>
+              <input type="text" class="form-control" placeholder="Ingrese un destino">
             </div>
-            <div class="">
+            <br>
               <button type="button" id="ruta" class="btn btn-default">Trazar ruta</button>
-            </div>
           </form>
         </div>
+
         <div id="mapa" class="col-lg-6">
           <div class="col-lg-10 center">
 
