--- a/index.html
+++ b/index.html
@@ -80,21 +80,22 @@
     <div class="container margin">
       <div class="col-lg-12">
         <div class="col-lg-6">
-          <form class="form-group" action="index.html" method="post">
-            <div class="">
-              <h3>Tarifas</h3>
-              <p>Consulta las tarifas LabCar aquí</p>
-            </div>
-            <div class="form-inline">
-              <i class="glyphicon glyphicon-record"></i>
-              <input type="text" class="form-control" placeholder="Ingrese punto de partida">
-            </div>
-            <div class="form-inline">
-              <i class="glyphicon glyphicon-send "></i>
-              <input type="text" class="form-control" placeholder="Ingrese un destino">
+          <div class="col-lg-12">
+            <h3>Tarifas</h3>
+            <p>Consulta las tarifas LabCar aquí</p>
+          </div>
+          <form class="col-lg-12 form-inline" action="index.html" method="post">
+            <div class="col-lg-12 form-group">
+              <i class="col-lg-1 glyphicon glyphicon-record"></i>
+              <input type="text" class=" form-control bg-yellow" placeholder="Ingrese punto de partida">
             </div>
             <br>
-              <button type="button" id="ruta" class="btn btn-default">Trazar ruta</button>
+            <div class="col-lg-12 form-group">
+              <i class="col-lg-1 glyphicon glyphicon-send "></i>
+              <input type="text" class="form-control bg-yellow" placeholder="Ingrese un destino">
+            </div>
+            <p>
+            <button type="button" id="ruta" class=" col-lg-6 btn btn-default">Trazar ruta</button>
           </form>
         </div>
 
@@ -107,7 +108,7 @@
     </div>
   </section>
 
-  <section id="footer" class="row">
+  <footer id="footer" class="row">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 margin">
@@ -161,7 +162,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </footer>
 
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDMW32VPlxybj__BvTKHC_OSM3QPZeh0CE&callback=initMap&libraries=places"></script>
   <script type="text/javascript" src="assets/js/app.js"></script>
