--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
   <section id="tarifas" class="row bg-yellow white">
     <div class="container margin">
       <div class="col-lg-12">
-        <div class="col-lg-6">
+        <div class="col-lg-6 col-xs-12">
           <div class="col-lg-12">
             <h3>Tarifas</h3>
             <p>Consulta las tarifas LabCar aquí</p>
@@ -99,8 +99,8 @@
           </form>
         </div>
 
-        <div id="mapa" class="col-lg-6">
-          <div class="col-lg-10 center">
+        <div id="mapa" class="col-lg-6 col-xs-12">
+          <div class="col-lg-10 col-xs-6">
 
           </div>
         </div>
@@ -111,21 +111,21 @@
   <footer id="footer" class="row">
     <div class="container">
       <div class="row">
-        <div class="col-lg-12 margin">
+        <div class="col-lg-12 col-xs-12 margin">
           <p><img src="assets/img/logo-blanco.png" alt="logo"></p>
           <hr>
         </div>
       </div>
       <div class="row text-center">
-        <div class="col-lg-12">
-          <div class="col-lg-3">
+        <div class="col-lg-12 col-xs-12">
+          <div class="col-lg-3 col-xs-3">
               <i class="icon-facebook:before"></i>
               <i class="icon-twitter"></i>
               <i class="icon-linkedin2"></i>
               <i class="icon-appleinc"></i>
               <i class="icon-play3"></i>
           </div>
-          <div class="col-lg-3">
+          <div class="col-lg-3 col-xs-3">
             <ul class="media-list">
               <li>Viaja</li>
               <li>Conduce</li>
@@ -137,7 +137,7 @@
               <li>Seguridad</li>
             </ul>
           </div>
-          <div class="col-lg-3">
+          <div class="col-lg-3 col-xs-3">
             <ul class="media-list">
               <li>Viaja</li>
               <li>Conduce</li>
@@ -149,7 +149,7 @@
               <li>Seguridad</li>
             </ul>
           </div>
-          <div class="col-lg-3">
+          <div class="col-lg-3 col-xs-3">
             <img src="assets/img/google-play.png" alt="google play">
             <img src="assets/img/app-store.png" alt="app store">
           </div>
